--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,18 @@
 {
-  "manifest_version": 2,
   "name": "Wanikani Dark Mode",
+  "short_name": "Wanikani Dark",
   "version": "0.1.0",
+  "icons": {
+    "16": "icons/wanikani-light16.png",
+    "48": "icons/wanikani-light48.png",
+    "128": "icons/wanikani-light128.png"
+  },
   "content_scripts": [
     {
-      "matches": ["*://*.wanikani.com/*"],
-      "js": ["script.js"],
       "css": ["styles.css"],
+      "matches": ["*://*.wanikani.com/*"],
       "exclude_matches": ["*://community.wanikani.com/*"]
     }
-  ]
+  ],
+  "manifest_version": 2
 }
